--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>Фильмотека — Личный кабинет</title>
   </head>
-  <body>
+  <body class="antialiased bg-gradient-to-br from-slate-900 via-indigo-900 to-slate-800 text-slate-100">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
